--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "MD M Rahman <mujib517@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "express": "^4.16.2",
