--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "bootstrap": "^3.3.7",
     "express": "^4.16.2",
     "express-hbs": "^1.0.4",
-    "mongoose": "^4.13.4"
+    "express-session": "^1.15.6",
+    "mongoose": "^4.13.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
